<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profile_picture"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/location_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_image"
        android:layout_marginTop="25dp"
        android:text="@string/default_location"
        android:textAlignment="center"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/badges_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/location_tv"
        android:layout_margin="30dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gold_badge_tv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/gold_badge"
                android:textSize="14sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/silver_badge_tv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/silver_badge"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/bronze_badge_tv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/bronze_badge"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textSize="14sp">

            <TextView
                android:id="@+id/gold_badge_value"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/zero_value"
                android:textSize="14sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/silver_badge_value"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/zero_value"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/bronze_badge_value"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/zero_value"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>